# personality-cloaking-project

./: .env  .gitignore  Dockerfile  ONBOARDING.md  Pipfile  backend_api.py  bait_generator.py  chat_tracker_api.py  chat_tracker_examples.py  clean_db.py  conversation_queue.py  dashboard_final.py  dashboardui.py  database.db  fine_tune_chat.py  integration_examples.py  logging_config.py  main.py  profiles.db  rate_limiter.py  readme_docker.txt  requirements_new.txt  safety.py  scam_generator.py  scam_templates.py  schema.sql  test_integration.py  view_db.py
backend/: main.py
core/: bait_generator.py  chat_engine.py  database_module.py  engagement_tracker.py  models.py  schema.sql
data/: fine_tune_data.json  training_samples.py
frontend/: app.py
phase-2/: README.md  chatbot_guide_for_poonam.md  data_tracking_guide_for_harsh.md  scam_generation_guide_for_snehashish.md  scam_generation_guide_for_snehashish.md(Security)  system_integration_guide_for_sanchi.md  system_integration_guide_for_sanchi.md(System Integration)  ui_display_guide_for_manisha.md  ui_display_guide_for_manisha.md(frontend)
phase-2/phase-2/: big_five_scam_mapping.md
phase-2/phase-2/phase-2/: chatbot_guide_for_poonam.md
phase-2/phase-2/phase-2/phase-2/: scam_generation_guide_for_snehashish.md
phase-2/phase-2/phase-2/phase-2/phase-2/: ui_display_guide_for_manisha.md
scam-sim-lab/: Dockerfile  README.md  api.py  pyproject.toml  requirements.txt
scam-sim-lab/app/: generator.py  limiter.py
scam-sim-lab/scam_generator/: __init__.py  scam_generator.py
tests/: test_integration.py
(+2 files in other folders)
