[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scam-generator"
version = "0.1.0"
description = "Simulation-only scam message generator for cyber training"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
[tool.setuptools]
packages = ["scam_generator"]
